<resources>
    <string name="app_name">Calculator</string>
    <string name="first_number">Enter first number</string>
    <string name="second_number">Enter second number</string>
    <string name="display_answer">Display result here</string>
    <string name="add_btn">+</string>
    <string name="subtract_btn">-</string>
    <string name="multiplication_btn">*</string>
    <string name="divide_btn">/</string>
</resources>