<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstNo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/first_number"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="40dp" />

    <EditText
        android:id="@+id/secondNo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/second_number"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/firstNo"
        />

    <LinearLayout
        android:id="@+id/theButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_margin="10dp"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/secondNo"
        tools:layout_editor_absoluteX="9dp">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/add_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="40dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/subtract_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="40dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/multiplication_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="40dp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/divide_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="40dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="113dp"
        android:layout_margin="40dp"
        android:gravity="center"
        android:hint="Display answer here"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:text="@string/display_answer"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theButtonsLayout"
        app:layout_constraintVertical_bias="0.059"
        tools:layout_editor_absoluteX="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>